<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/distancia"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/totalKM"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/inputPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/preco"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preco_por_litro"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/inputAutonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/km_por_litro"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/seu_total_de_gasto_ser_de"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:text="@string/money"
        android:textSize="40sp" />

    <Button
        android:id="@+id/botaoCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:text="@string/calcular"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>